--- a/BlazorApp1/Components/_Imports.razor
+++ b/BlazorApp1/Components/_Imports.razor
@@ -7,6 +7,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
 @using BlazorApp1
 @using BlazorApp1.Components
 @using BlazorApp1.Components.Layout
