feat: add sign in button

--- a/BlazorApp1/Components/Layout/MainLayout.razor
+++ b/BlazorApp1/Components/Layout/MainLayout.razor
@@ -19,7 +19,7 @@
                 <MudButton Variant="Variant.Text" Color="Color.Inherit" Href="/logout">Logout</MudButton>
             </Authorized>
             <NotAuthorized>
-                <MudButton Variant="Variant.Text" Color="Color.Inherit" Href="/login">Login</MudButton>
+                <MudButton Variant="Variant.Text" Color="Color.Inherit" Href="/login">Sign In</MudButton>
             </NotAuthorized>
         </AuthorizeView>
     </MudAppBar>
