--- a/BlazorApp1/Components/Pages/Home.razor
+++ b/BlazorApp1/Components/Pages/Home.razor
@@ -2,6 +2,28 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<MudPaper Elevation="0" Class="pa-8 text-center">
+    <h1>Welcome to BlazorApp1</h1>
+    <p class="mt-4 mb-6">A modern Blazor application with Auth0 authentication</p>
+    
+    <AuthorizeView>
+        <Authorized>
+            <MudButton Variant="Variant.Filled" Color="Color.Primary" Href="/" class="mr-4">
+                Explore App
+            </MudButton>
+        </Authorized>
+        <NotAuthorized>
+            <MudButton Variant="Variant.Filled" Color="Color.Primary" Href="/login" class="mr-4">
+                Sign In
+            </MudButton>
+            <MudButton Variant="Variant.Outlined" Href="/" class="ml-4">
+                Learn More
+            </MudButton>
+        </NotAuthorized>
+    </AuthorizeView>
+</MudPaper>
 
-Welcome to your new app.
+<MudPaper Elevation="1" Class="mt-8 pa-6">
+    <h3>About This Application</h3>
+    <p>This is a Blazor Web Application built with ASP.NET Core 8.0 using MudBlazor components and Auth0 authentication.</p>
+</MudPaper>
